# whole_body_state_msgs

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  contact_state_rule.bmr  package.xml  setup.cfg  setup.py  whole_body_state_acceleration_rule.bmr
.github/workflows/: industrial_ci_action.yml  ros_ci.yml
msg/: CentroidalState.msg  ContactState.msg  JointCommand.msg  JointState.msg  WholeBodyController.msg  WholeBodyState.msg  WholeBodyTrajectory.msg
src/state_msgs/: whole_body_controller_publisher.py  whole_body_interface.py  whole_body_state_publisher.py  whole_body_trajectory_publisher.py
src/whole_body_state_msgs/: __init__.py  whole_body_controller_publisher.py  whole_body_interface.py  whole_body_state_publisher.py  whole_body_trajectory_publisher.py
