<?xml version="1.0"?>
<package format="3">
  <name>whole_body_state_msgs</name>
  <version>2.0.0</version>
  <description>
    Message and service data structures for robot states
  </description>

  <maintainer email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</maintainer>
  <author email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</author>
  <author email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosbag_migration_rule</exec_depend>

  <export>
    <rosbag_migration_rule rule_file="contact_state_rule.bmr"/>
    <rosbag_migration_rule rule_file="whole_body_state_acceleration_rule.bmr"/>
  </export>
</package>
