<?xml version="1.0"?>
<package format="3">
  <name>whole_body_state_msgs</name>
  <version>2.0.0</version>
  <description>
    Message and service data structures for robot states
  </description>

  <maintainer email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</maintainer>
  <author email="carlos.mastalli@ed.ac.uk">Carlos Mastalli</author>
  <author email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <!-- build and runtime dependencies-->
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- build dependencies -->
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>

  <!-- runtime dependencies -->
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>
  <exec_depend>rosbag_migration_rule</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <rosbag_migration_rule rule_file="contact_state_rule.bmr"/>
    <rosbag_migration_rule rule_file="whole_body_state_acceleration_rule.bmr"/>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
