<?xml version="1.0"?>
<package format="3">
  <name>whole_body_state_msgs</name>
  <version>2.0.0</version>
  <description>
    Message and service data structures for robot states. Compatibility with ROS1 and ROS2.
  </description>

  <maintainer email="c.mastalli@hw.ac.uk">Carlos Mastalli</maintainer>
  <author email="c.mastalli@hw.ac.uk">Carlos Mastalli</author>
  <author email="wolfgang@robots.ox.ac.uk">Wolfgang Merkt</author>
  <license>BSD 3-Clause</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">rosidl_default_generators</buildtool_depend>

  <!-- build and runtime dependencies -->
  <depend>ros_environment</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- build dependencies -->
  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>

  <!-- runtime dependencies -->
  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 1">rosbag_migration_rule</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <rosbag_migration_rule rule_file="contact_state_rule.bmr"/>
    <rosbag_migration_rule rule_file="whole_body_state_acceleration_rule.bmr"/>
    <!-- This suffers from a bug in catkin, cf.: https://github.com/ros/catkin/issues/1170 -->
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
